Feat: migrated to tanstack's router

--- a/package.json
+++ b/package.json
@@ -13,12 +13,13 @@
         "@radix-ui/react-separator": "^1.1.7",
         "@radix-ui/react-slot": "^1.2.3",
         "@tailwindcss/vite": "^4.1.8",
+        "@tanstack/react-router": "^1.121.33",
+        "@tanstack/react-router-devtools": "^1.121.33",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "lucide-react": "^0.513.0",
         "react": "^19.1.0",
         "react-dom": "^19.1.0",
-        "react-router": "^7.6.2",
         "tailwind-merge": "^3.3.0",
         "tailwindcss": "^4.1.8"
     },
@@ -26,6 +27,7 @@
         "@eslint/css": "^0.8.1",
         "@eslint/js": "^9.25.0",
         "@eslint/json": "^0.12.0",
+        "@tanstack/router-plugin": "^1.121.33",
         "@types/node": "^22.15.30",
         "@types/react": "^19.1.2",
         "@types/react-dom": "^19.1.2",
