--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
     "scripts": {
         "dev": "vite",
         "build": "tsc -b && vite build",
-        "lint": "eslint .",
-        "preview": "vite preview"
+        "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+        "preview": "vite preview",
+        "prepare": "husky"
     },
     "dependencies": {
         "@radix-ui/react-separator": "^1.1.7",
@@ -38,6 +39,7 @@
         "eslint-plugin-react-hooks": "^5.2.0",
         "eslint-plugin-react-refresh": "^0.4.19",
         "globals": "^16.0.0",
+        "husky": "^9.1.7",
         "prettier": "^3.5.3",
         "sass-embedded": "^1.89.2",
         "tw-animate-css": "^1.3.4",
