--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "prepare": "husky"
     },
     "dependencies": {
+        "@radix-ui/react-dialog": "^1.1.14",
         "@radix-ui/react-dropdown-menu": "^2.1.15",
         "@radix-ui/react-hover-card": "^1.1.14",
         "@radix-ui/react-separator": "^1.1.7",
