--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     },
     "lint-staged": {
         "src/**/*.{ts,tsx}": [
-            "eslint --report-unused-disable-directives --max-warnings 0",
+            "eslint --report-unused-disable-directives --max-warnings 0 --no-warn-ignored",
             "prettier --write"
         ],
         "src/**/*.{json,css,md}": "prettier --write"
