--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
         "react": "^19.1.0",
         "react-dom": "^19.1.0",
         "tailwind-merge": "^3.3.0",
-        "tailwindcss": "^4.1.8"
+        "tailwindcss": "^4.1.8",
+        "zustand": "^5.0.6"
     },
     "devDependencies": {
         "@eslint/css": "^0.8.1",
