--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
         "clsx": "^2.1.1",
         "ky": "^1.8.1",
         "lucide-react": "^0.513.0",
+        "next-themes": "^0.4.6",
         "react": "^19.1.0",
         "react-dom": "^19.1.0",
+        "sonner": "^2.0.5",
         "tailwind-merge": "^3.3.0",
         "tailwindcss": "^4.1.8",
         "zustand": "^5.0.6"
