--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
         "@eslint/css": "^0.8.1",
         "@eslint/js": "^9.25.0",
         "@eslint/json": "^0.12.0",
+        "@tanstack/react-query-devtools": "^5.83.0",
         "@tanstack/router-plugin": "^1.129.2",
         "@types/node": "^22.15.30",
         "@types/react": "^19.1.2",
