--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
         "dev": "vite",
         "build": "tsc -b && vite build",
         "lint": "eslint 'src/**/*.{ts,tsx}' --report-unused-disable-directives --max-warnings 0",
+        "check": "tsc -b && pnpm lint",
         "preview": "vite preview",
         "prepare": "husky"
     },
