--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,7 +15,7 @@ jobs:
             - name: Setup Node.js
               uses: actions/setup-node@v4
               with:
-                  node-version: "22"
+                  node-version-file: ".nvmrc"
 
             - name: Setup pnpm
               uses: pnpm/action-setup@v4
@@ -39,7 +39,7 @@ jobs:
             - name: Setup Node.js
               uses: actions/setup-node@v4
               with:
-                  node-version: "22"
+                  node-version-file: ".nvmrc"
 
             - name: Setup pnpm
               uses: pnpm/action-setup@v4
