--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -78,7 +78,22 @@ jobs:
 
             - name: Deploy to S3
               run: |
-                  aws s3 sync dist/ s3://${{ vars.AWS_S3_BUCKET }} --delete
+                  # Cache hashed JS/CSS assets forever
+                  aws s3 sync dist/ s3://${{ vars.AWS_S3_BUCKET }} --delete \
+                    --cache-control "public, max-age=31536000, immutable" \
+                    --include "*.js" --include "*.css"
+
+                  # Cache static assets for 1 day (fonts, images, icons)
+                  aws s3 sync dist/ s3://${{ vars.AWS_S3_BUCKET }} \
+                    --cache-control "public, max-age=86400" \
+                    --include "*.woff2" --include "*.png" --include "*.webp" \
+                    --include "*.jpg" --include "*.jpeg" --include "*.svg" \
+                    --include "*.ico"
+
+                  # Short cache for HTML/JSON/manifest files
+                  aws s3 sync dist/ s3://${{ vars.AWS_S3_BUCKET }} \
+                    --cache-control "public, max-age=60, must-revalidate" \
+                    --include "*.html" --include "*.json" --include "*.webmanifest"
 
             - name: Invalidate CloudFront (optional)
               run: |
